WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63699
[GTK] media/media-blocked-by-willsendrequest.html fails
https://bugs.webkit.org/show_bug.cgi?id=63699
Summary
[GTK] media/media-blocked-by-willsendrequest.html fails
Philippe Normand
Reported
2011-06-30 04:04:58 PDT
I think it fails because the player tries to load a file:// uri which implies using the filesrc gstreamer element. In this case the resource access is not verified at all on WebKit side. For http uris our custom webkitwebsrc element does this check already. I'll skip the test for now and try to work out a patch.
Attachments
proposed patch
(3.13 KB, patch)
2011-07-12 08:37 PDT
,
Philippe Normand
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2011-07-04 23:44:18 PDT
One approach to explore would be to use webkitwebsrc for file:// uris as well.
Philippe Normand
Comment 2
2011-07-12 08:37:07 PDT
Created
attachment 100490
[details]
proposed patch
Philippe Normand
Comment 3
2011-07-13 10:05:18 PDT
Committed
r90927
: <
http://trac.webkit.org/changeset/90927
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug