        [GTK] media/media-blocked-by-willsendrequest.html fails         https://bugs.webkit.org/show_bug.cgi?id=63699

Reviewed by Martin Robinson.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (willSendRequestCallback): Abort the request if explicitely asked
        by the LayoutTestController's willSendRequestReturnsNull() function.

LayoutTests:

        [GTK] media/media-blocked-by-willsendrequest.html fails
        https://bugs.webkit.org/show_bug.cgi?id=63699

        Reviewed by Martin Robinson.

        * platform/gtk/Skipped: Unskip fixed test.

Canonical link: https://commits.webkit.org/80184@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90927 268f45cc-cd09-0410-ab3c-d52691b4dbfc